fix(tabs): corrige cor de fundo Corrige a cor de fundo do tabs para --color-transparent possibilitar uma visibilidade melhor em diferentes temas
fixes DTHFUI-8913

--- a/src/css/components/po-tabs/po-tab-button/po-tab-button.css
+++ b/src/css/components/po-tabs/po-tab-button/po-tab-button.css
@@ -13,7 +13,7 @@
 }
 
 .po-tab-button-default po-button[p-kind='tertiary'] {
-  --shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  --shadow: var(--shadow-lg);
   --background-color: var(--color-neutral-light-00);
 }
 
